--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.show-sql=true
 logging.level.org.springframework = DEBUG
 
-
+spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:globalDB
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
