--- a/application.properties
+++ b/application.properties
@@ -4,3 +4,5 @@ logging.level.org.springframework = DEBUG
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:globalDB
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+
+eureka.client.service-url.defaultZone=http://localhost:5555/eureka
