--- a/ImageMS.properties
+++ b/ImageMS.properties
@@ -1,5 +1,5 @@
 spring.servlet.multipart.enabled=true
-spring.servlet.multipart.location=C:/filesystem/dp/
+spring.servlet.multipart.location=/filesystem/dp/
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=15MB
 
