--- a/ImageMS.properties
+++ b/ImageMS.properties
@@ -6,7 +6,7 @@ spring.servlet.multipart.max-request-size=15MB
 spring.datasource.username=C##IMAGEDB
 spring.datasource.password=system
 
-
+filesystem.root.path=C:
 #second level cache
 #hibernate.cache.use_second_level_cache=true
 #hibernate.cache.provider_class=org.hibernate.cache.EhCacheProvider
