--- a/ImageMS.properties
+++ b/ImageMS.properties
@@ -7,6 +7,7 @@ spring.datasource.username=C##IMAGEDB
 spring.datasource.password=system
 
 filesystem.root.path=C:
+filesystem.defaultpath = C:\filesystem\dp\wolf3.png;
 #second level cache
 #hibernate.cache.use_second_level_cache=true
 #hibernate.cache.provider_class=org.hibernate.cache.EhCacheProvider
